[gd_scene load_steps=25 format=3 uid="uid://0tdkxphoox4e"]

[ext_resource type="Script" path="res://scenes/player_control/player_control_fps.gd" id="1_luey8"]
[ext_resource type="Script" path="res://src/utils/attribute.gd" id="2_8200q"]
[ext_resource type="Script" path="res://src/inventory/ammunition_inventory.gd" id="2_fwo11"]
[ext_resource type="Script" path="res://src/inventory/capacity.gd" id="2_hue70"]
[ext_resource type="Script" path="res://src/utils/character_attributes.gd" id="2_i6aag"]
[ext_resource type="PackedScene" uid="uid://bq2n14c8lujou" path="res://scenes/items/weapons/pistol.tscn" id="2_ku3gn"]
[ext_resource type="PackedScene" uid="uid://q24afikip7mk" path="res://scenes/items/weapons/rifle.tscn" id="3_mdciq"]
[ext_resource type="PackedScene" uid="uid://cc3umxwr4juqh" path="res://scenes/items/weapons/debug_gun.tscn" id="4_1b3c8"]
[ext_resource type="Script" path="res://src/utils/audio_stream_pool.gd" id="4_2t4x1"]
[ext_resource type="PackedScene" uid="uid://sq8e7fclptg0" path="res://scenes/items/weapons/shotgun.tscn" id="8_hrexx"]

[sub_resource type="Resource" id="Resource_2sbua"]
script = ExtResource("2_hue70")
amount = 0
max_capacity = 60

[sub_resource type="Resource" id="Resource_v8f77"]
script = ExtResource("2_hue70")
amount = 0
max_capacity = 5

[sub_resource type="Resource" id="Resource_taha3"]
script = ExtResource("2_hue70")
amount = 14
max_capacity = 70

[sub_resource type="Resource" id="Resource_lduxf"]
script = ExtResource("2_hue70")
amount = 0
max_capacity = 52

[sub_resource type="Resource" id="Resource_w0nos"]
script = ExtResource("2_fwo11")
pistol_ammu = SubResource("Resource_taha3")
assault_ammu = SubResource("Resource_2sbua")
shotgun_ammu = SubResource("Resource_lduxf")
grenade_ammu = SubResource("Resource_v8f77")

[sub_resource type="Resource" id="Resource_b8qe4"]
script = ExtResource("2_8200q")
current = 10.0
maximum = 10.0

[sub_resource type="Resource" id="Resource_en25f"]
script = ExtResource("2_i6aag")
health = SubResource("Resource_b8qe4")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3jr61"]

[sub_resource type="Animation" id="Animation_hx4cg"]
resource_name = "Dying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [60.0, 120.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 1.7, 0), Vector3(0, 1.22127, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.395596, -3.89844e-09, -0.571822)]
}

[sub_resource type="Animation" id="Animation_a0grx"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x26kj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ja382"]
_data = {
"Dying": SubResource("Animation_hx4cg"),
"Idle": SubResource("Animation_a0grx"),
"RESET": SubResource("Animation_x26kj")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yj3xk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ktyal"]
material = SubResource("StandardMaterial3D_yj3xk")

[node name="PlayerControlFps" type="CharacterBody3D" node_paths=PackedStringArray("pistol", "rifle", "shotgun", "debug_gun")]
collision_layer = 32
collision_mask = 255
platform_floor_layers = 4294967165
script = ExtResource("1_luey8")
speed = 4.0
ammunition = SubResource("Resource_w0nos")
pistol = NodePath("Camera3D/Hand/Pistol")
has_pistol = true
rifle = NodePath("Camera3D/Hand/Rifle")
shotgun = NodePath("Camera3D/Hand/Shotgun")
has_shotgun = true
debug_gun = NodePath("Camera3D/Hand/DebugGun")
grenade_throw_angle_deg = 20.0
attributes = SubResource("Resource_en25f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3jr61")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
cull_mask = 950271
fov = 60.0
near = 0.04

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 131

[node name="SubViewportContainer" type="SubViewportContainer" parent="Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="SubViewport" type="SubViewport" parent="Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="FpsCamera" type="Camera3D" parent="Camera3D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.70671, 0)
cull_mask = 65536
fov = 60.0
far = 2.0

[node name="Hand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49688, -0.253111, -0.552979)

[node name="Pistol" parent="Camera3D/Hand" node_paths=PackedStringArray("ray_cast", "audio_player") instance=ExtResource("2_ku3gn")]
ray_cast = NodePath("../../RayCast3D")
audio_player = NodePath("../../../AudioStreamPool")

[node name="Rifle" parent="Camera3D/Hand" node_paths=PackedStringArray("ray_cast", "audio_player") instance=ExtResource("3_mdciq")]
visible = false
spread = 10.0
spread_max = 300.0
ray_cast = NodePath("../../RayCast3D")
audio_player = NodePath("../../../AudioStreamPool")

[node name="DebugGun" parent="Camera3D/Hand" node_paths=PackedStringArray("ray_cast") instance=ExtResource("4_1b3c8")]
visible = false
can_hit = false
ray_cast = NodePath("../../RayCast3D")

[node name="Shotgun" parent="Camera3D/Hand" node_paths=PackedStringArray("ray_cast", "audio_player") instance=ExtResource("8_hrexx")]
visible = false
ray_cast = NodePath("../../RayCast3D")
audio_player = NodePath("../../../AudioStreamPool")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
root_node = NodePath("../..")
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_ja382")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ktyal")

[node name="AudioStreamPool" type="Node3D" parent="."]
script = ExtResource("4_2t4x1")
pool_size = 5
use_3d_audio = false
